Prevent buttons from overflowing during animation

--- a/css/portal-dashboard/level-viewer.less
+++ b/css/portal-dashboard/level-viewer.less
@@ -12,12 +12,14 @@
 
   .activityButtons {
     display: flex;
+    height: 158px;
     margin-top: 19px;
     margin-left: 3px;
     font-family: 'Roboto', sans-serif;
     font-size: 14px;
     font-weight: 500;
     color: @cc-teal-dark1;
+    overflow: hidden;
 
     .animate {
       width: 120px;
